--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -29,7 +29,7 @@ img{max-width:100%;}
 /*end reset*/
 body {
     font-family: 'Open Sans', sans-serif;
-    background:url(../images/pku.jpg) no-repeat 0px 0px;
+    background:url(../images/uin.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-ms-background-size:cover;
